# smart_class_desktop

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  whiteboard.cpp  whiteboard.h
